--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1622,8 +1622,28 @@ p{
 .broadcastroom_show{
 	display: none;
 }
+.on_line_status .p4 {
+    margin-top: 0.03rem;
+    margin-left: 0.1rem;
+    
+}
+.on_line_status .p4 img {
+    width: 0.24rem;
+    vertical-align: middle;
+    margin-right: 0.02rem;
+    float: left;
+}
+.on_line_status .p3 img{
+	width: 0.24rem;
+	float: left;
+	margin-right: 0.05rem;
+	margin-left: 0.1rem;
+}
+.on_line_status .p3 span{
+	display: inherit;
+}
 /*为您推荐课程结束*/
-
+    
 
 /*介绍开始*/
 .message_referral{
@@ -1708,6 +1728,7 @@ p{
 	width: 6.98rem;
     margin: 0 auto;
     margin-top: 0.2rem;
+    word-break:break-all;
 }
 
 .my_synopsis_time ul li span{
@@ -1755,6 +1776,7 @@ p{
 	width: 6.98rem;
     margin: 0 auto;
     margin-top: 0.2rem;
+    line-height: 0.42rem !important;
 }
 table {
 	border: 0;
@@ -1793,6 +1815,9 @@ table tr td img{
 }
 .am td{
 	border-bottom: 1px solid #DEDEDE !important;
+}
+.am td img{
+	/*display: */
 }
 .am td:first-child{
 	border-left: 1px solid #DEDEDE !important;
