--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1847,3 +1847,50 @@ table tr td img{
 /*介绍结束*/
 
 /*中间内容结束*/
+/*点击回复出现删除复制开始*/
+.remove_copy{
+	width: 100%;
+	height: 100%;
+	/* position: fixed;
+	top: 0;
+	z-index: 1; */
+	display: none;
+}
+.remove_copy_bg{
+	width: 7.5rem;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	opacity: 0.3;
+	z-index: 999999;
+    background: #000;
+}
+.remove_copy_main{
+	width: 6rem;
+    height: 1rem;
+    margin: 0 auto;
+    background: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999991;
+    margin-top: -0.5rem;
+    margin-left: -3rem;
+    border-radius: 4px;
+}
+.copy{
+	width: 100%;
+	height: 1rem;
+	line-height: 1rem;
+	font-size: 0.3rem;
+	text-indent: 0.4rem;
+	border-bottom: 1px solid #f0f0f0;
+}
+.remove{
+	width: 100%;
+	height: 1rem;
+	line-height: 1rem;
+	font-size: 0.3rem;
+	text-indent: 0.4rem;
+}
+/*点击回复出现删除复制结束*/
