--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -199,6 +199,7 @@ outline: none;
 	list-style: none;
 	float: left;
 	margin-right: 20px;
+	cursor: pointer;
 }
 .activity-nav li img{
 	margin-right: 5px;
@@ -730,6 +731,7 @@ outline: none;
 	float: left;
 	color: #188EEE;
 	margin-left: 22px;
+	cursor: pointer;
 }
 .reply-user-wrap{
 	width: 880px;
@@ -1647,7 +1649,7 @@ outline: none;
     font-size: 14px;
 	color: #999;
 }
-.contentWrap #hospital .zhuanlan_bottom  .hospital_worktime ul{
+/*.contentWrap #hospital .zhuanlan_bottom  .hospital_worktime ul{
 	display: inline-block;
 	vertical-align: middle;
 }
@@ -1663,10 +1665,56 @@ outline: none;
 }
 .contentWrap #hospital .zhuanlan_bottom  .hospital_worktime li:hover{
 	cursor: pointer;
-}
-/*.contentWrap #hospital .zhuanlan_bottom form #resourceType label input{
-	vertical-align: sub;
 }*/
+
+
+.contentWrap #hospital .zhuanlan_bottom  .hospital_worktime table{
+	width: 698px;
+	height: 152px;
+	display: inline-block;
+	vertical-align: top;
+	text-align: center;
+}
+
+.contentWrap #hospital .zhuanlan_bottom  .hospital_worktime table tr{
+	height: 46px;
+	border: 1px solid #dedede;
+}
+
+.contentWrap #hospital .zhuanlan_bottom  .hospital_worktime table th{
+	width: 87px;
+	text-align: center;
+}
+.contentWrap #hospital .zhuanlan_bottom  .hospital_worktime table td p{
+	    width: 20px;
+    height: 20px;
+    border: 1px solid #dedede;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 8px 0 0;
+    cursor: pointer;
+}
+
+.contentWrap #hospital .zhuanlan_bottom  .hospital_worktime table td p img{
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.contentWrap #hospital .zhuanlan_bottom form #resourceType label input{
+	vertical-align: sub;
+}
 .contentWrap #hospital .zhuanlan_bottom  .baocun #submit{
 	display: inline-block;
 	width: 120px;
