--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -513,10 +513,33 @@ outline: none;
 	height: 15px;
     margin-top: -3px;
 }
-.save-video-wrap{
+.save-video-box{
 	width: 920px;
 	height: 520px;
 	margin-bottom: 20px;
+	position: relative;
+}
+.save-video-wrap{
+	width: 920px;
+	height: 520px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 5;
+
+}
+.save-video-fengmian{
+	position: absolute;
+	width: 920px;
+	height: 520px;
+	left: 0;
+	top: 0;
+	z-index: 1;
+}
+.save-video-fengmian img{
+	width: 100%;
+	height: 100%;
+	display: inline-block;
 }
 /*编辑内容*/
 .edit-content {
