--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -878,6 +878,14 @@ p{
     height: 2.1rem;
 }
 /*点击收起结束*/
+.paper_nav_cen_div{
+	width: 7.5rem;
+	margin: 0 auto;
+	background: #fff;
+}
+.paper_nav_cen_div{
+	padding-bottom: 0.2rem;
+}
 .paper_nav_cen{
 	width: 6.98rem;
     min-height: 1.4rem;
@@ -885,7 +893,7 @@ p{
     /* border: 1px solid #F0F0F0; */
     border-radius: 4px;
     margin: 0 auto;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0rem;
 }
 .paper_nav_cen img:last-child{
 	margin-right: 0;
@@ -1790,6 +1798,14 @@ p{
     margin-top: 0.2rem;
     line-height: 0.42rem !important;
 }
+.self_introduction_cen img{
+	max-width: 6.98rem;
+	margin: 0 auto;
+}
+.self_introduction_cen p img{
+	max-width: 6.98rem;
+	margin: 0 auto;
+}
 table {
 	border: 0;
 	border-spacing: 0;
@@ -1854,7 +1870,20 @@ table tr td img{
 .pm td:last-child{
 	border-right: 1px solid #DEDEDE !important;
 }
-
+.baseImagenumber{
+	width: 5rem;
+	height: 5rem;
+	background: #fff;
+	display: none;
+}
+.baseImagenumber img{
+	width: 2rem;
+	height: 2rem;
+}
+.baseImagenumber p{
+	font-size: 0.3rem;
+	color: #333;
+}
 /*介绍结束*/
 
 /*中间内容结束*/
