文章头部一行没有做隐藏

--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1268,7 +1268,7 @@ p{
 .article_nav_span{
 	width: 6.98rem;
     margin: 0 auto;
-    height: 0.42rem;
+    /*height: 0.42rem;*/
     margin-bottom: 0.2rem;
 }
 .article_nav_span .title{
