--- a/wechat/src/main/webapp/xcview/css/physician/article.css
+++ b/wechat/src/main/webapp/xcview/css/physician/article.css
@@ -125,10 +125,16 @@ header{
     z-index: 2;*/
 }
 .article_time div{
-
+    width: 2.6rem;
+    margin: 0 auto;
+    background: #fff;
+    position: absolute;
+    z-index: 999;
+    left: 50%;
+    margin-left: -1.3rem;
 }
 .article_border_left{
-    width: 1.9rem;
+    width: 2.1rem;
     height: 1px;
     background: #f0f0f0;
     position: absolute;
@@ -137,7 +143,7 @@ header{
     /*z-index: -1;*/
 }
 .article_border_right{
-    width: 1.9rem;
+    width: 2.1rem;
     height: 1px;
     background: #f0f0f0;
     position: absolute;
@@ -167,6 +173,11 @@ header{
 	line-height: 0.42rem;
 	width: 6.98rem;
 	margin: 0 auto;
+    word-break: break-all;
+}
+.consilia_textarea p img{
+    max-width: 6.98rem;
+    margin: 0 auto;
 }
 
 /*评价开始*/
@@ -391,7 +402,7 @@ header{
     width: 7.5rem;
     height: 100%;
     background: #000;
-    opacity: 0.5;
+    opacity: 0.3;
     position: fixed;
     left: 50%;
     top: 0;
@@ -416,6 +427,73 @@ header{
     z-index: 99999999999;
 }
 /*点击分享按钮结束*/
+
+/*回复评价开始*/
+.bg_userModal {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,.1);
+}
+.wrapLittle_comment {
+    width: 7.5rem;
+    position: fixed;
+    height: 4.45rem;
+    display: none;
+    background: white;
+    box-sizing: border-box;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3.75rem;
+    z-index: 5;
+    padding: 0.3rem 0.26rem 0.6rem;
+}
+.little_comment {
+    padding-bottom: 0.2rem;
+}
+.detailed_comments {
+    font-size: 0.26rem;
+    color: #888888;
+    clear: both;
+    /* padding-top: 0.4rem; */
+}
+.text_write_box {
+    width: 100%;
+    height: 2rem;
+    border: 1px solid #dedede;
+    padding: 0.1rem;
+    box-sizing: border-box;
+    margin: 0.1rem 0 0.3rem;
+}
+.text_write_box textarea {
+    resize: none;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    outline: none;
+    font-size: 0.26rem;
+}
+.brow_btn li:nth-child(odd) {
+    float: left;
+    width: 0.42rem;
+    height: 0.42rem;
+}
+.brow_btn li:nth-child(odd) img {
+    width: 100%;
+    height: 100%;
+}
+.brow_btn li:nth-child(even) {
+    float: right;
+    border-radius: 0.08rem;
+    padding: 0.08rem 0.2rem;
+    background: #00BC12;
+    color: white;
+    font-size: 0.28rem;
+}
+/*回复评价结束*/
 
 
 
