医案--文章。评价修改。。。pc--专辑视频自动播放，input兼容问题修改

--- a/wechat/src/main/webapp/xcview/css/physician/consilia.css
+++ b/wechat/src/main/webapp/xcview/css/physician/consilia.css
@@ -288,6 +288,7 @@ header{
     background: rgba(0,0,0,.1);
     margin-left: -3.75rem;
     display: none;
+    z-index: 1;
 }
 
 .wrapAll_comment {
@@ -381,6 +382,7 @@ header{
     top: 0;
     left: 0;
     background: rgba(0,0,0,.1);
+    z-index: 1;
 }
 .wrapLittle_comment {
     width: 7.5rem;
