文章医案引入分享文件。修改医案和文章id

--- a/wechat/src/main/webapp/xcview/css/live_personal.css
+++ b/wechat/src/main/webapp/xcview/css/live_personal.css
@@ -162,7 +162,8 @@ textarea::-webkit-input-placeholder {
 .anchor_navigation .border{
 	position: absolute;
 	bottom: 0;
-	left: 0.9rem;
+	/*left: 0.9rem;*/
+	left: 1.04rem;
 	width: 0.52rem;
 	height: 0.04rem;
 	background: #00bc12;
