--- a/online-web/src/main/webapp/web/css/anchor/mymoney.css
+++ b/online-web/src/main/webapp/web/css/anchor/mymoney.css
@@ -138,7 +138,7 @@
     float: right;
     vertical-align: top;
     min-height: 520px;
-    padding-bottom: 50px;
+    /*padding-bottom: 50px;*/
     margin-top: 20px;
     background-color: #f8f8f8;
 }
