--- a/wechat/src/main/webapp/xcview/css/physician/consilia.css
+++ b/wechat/src/main/webapp/xcview/css/physician/consilia.css
@@ -441,5 +441,20 @@ header{
 }
 /*回复评价结束*/
 
-
+.show_baseImagenumber{
+    width: 100%;
+    height: 5rem;
+    text-align: center;
+    display: none;
+    background: white;
+}
+.show_baseImagenumber img{
+    width: 2.5rem;
+    display: inline-block;
+    margin-top: 0.5rem;
+}
+.show_baseImagenumber p{
+    color: #999;
+    padding: 0.2rem 0;
+}
 
