介绍--修改table显示图片。全部动态页添加背景图

--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1733,6 +1733,7 @@ p{
 }
 .my_synopsis_time ul li img{
 	width: 0.28rem;
+	margin-top: 0.06rem;
 }
 .my_synopsis_time ul .border {
     width: 0.06rem;
