--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -279,7 +279,7 @@ p{
 	background: #000;
 	opacity: 0.2;
 	position: fixed;
-	z-index: 1;
+	z-index: 9999991;
 }
 .screen_show_main{
 	width: 7.5rem;
@@ -1950,4 +1950,9 @@ table tr td img{
 
 .apm img{
 	display: none;
+}
+
+
+.comment{
+	z-index: 9 !important;
 }
