--- a/online-web/src/main/webapp/web/css/ResidentHospital.css
+++ b/online-web/src/main/webapp/web/css/ResidentHospital.css
@@ -127,7 +127,12 @@ a {
 }
 #doctor_in_inf .news_nav ul li > a > span{
     margin-left: 30px;
-    color: #666;
+    color: #cacbcb;
+    font-size: 14px;
+    margin-right: 15px;
+} 
+#doctor_in_inf .news_nav ul li > a > i{
+    margin-left: 30px;
     color: #cacbcb;
     font-size: 14px;
     margin-right: 15px;
