--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -210,6 +210,9 @@ outline: none;
 	float: right;
 	margin-top: 2px;
 }
+.activity-nav li:hover{
+	color: #00bc12;
+}
 .activity-nav .active{
 	color: #00bc12;
 }
