--- a/wechat/src/main/webapp/xcview/css/live_personal.css
+++ b/wechat/src/main/webapp/xcview/css/live_personal.css
@@ -246,7 +246,7 @@ textarea::-webkit-input-placeholder {
 	overflow: hidden;
 }
 .personal_status .title{
-	margin-bottom: 0.26rem;
+	margin-bottom: 0.46rem;
 }
 .title_border{
 	width: 0.06rem;
@@ -259,7 +259,9 @@ textarea::-webkit-input-placeholder {
 }
 .title_size{
 	font-size: 0.28rem;
-	color: #333333;
+    color: #333333;
+    position: absolute;
+    left: 0.4rem;
 }
 .wrap_img{
 	width: 2.12rem;
@@ -399,7 +401,7 @@ color: #999999;
 	height: 0.25rem;
 }
 .wrap_vedio_btn{
-	margin-top: 0.2rem;
+	margin-top: 0.5rem;
 }
 .wrap_vedio_btn li{
 
@@ -563,7 +565,7 @@ overflow: hidden;
 }
 .wrap_userName img{
 	    width: 1.5rem;
-    margin-top: 0.08rem;
+    margin-top: 0.06rem;
     margin-left: 0.15rem;
 }
 .write_text{
@@ -1008,5 +1010,10 @@ header.home img {
 }
 .home {
 	background:#d7c4b4;
+}
+.border_span{
+	    color: #333333;
+    position: absolute;
+    left: 0.4rem;
 }
 /*固定导航--渐变title结束*/
