--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1742,7 +1742,7 @@ p{
 }
 .my_synopsis_time ul li img{
 	width: 0.28rem;
-	margin-top: 0.06rem;
+	margin-top: 0.07rem;
 }
 .my_synopsis_time ul .border {
     width: 0.06rem;
@@ -2026,4 +2026,11 @@ table tr td img{
 #form_article{
     padding: 0 !important;
     height: 0.6rem;
+}
+
+.mui-pull-caption-nomore{
+    margin-top: -119px !important;
+}
+.mui-pull-bottom-pocket{
+	bottom: 0 !important;
 }
