--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -170,6 +170,7 @@ margin-top: -0.28rem;
 	width: 100%;
 	background: white;
 	margin-top: 0.2rem;
+	margin-bottom: 0.2rem;
 	padding: 0 0 0 0.26rem;
     box-sizing: border-box;
     overflow: hidden;
