课程ui修改。。医案详情加限制

--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -202,7 +202,7 @@ margin-top: -0.28rem;
 	height: 0.32rem;
 	border: 1px solid #F97B49;
 	text-align: center;
-	line-height: 0.32rem;
+	/*line-height: 0.32rem;*/
 	float: left;
 	color: #F97B49;
 	font-size: 0.2rem;
