--- a/wechat/src/main/webapp/xcview/css/physician/article.css
+++ b/wechat/src/main/webapp/xcview/css/physician/article.css
@@ -497,5 +497,22 @@ header{
 }
 /*回复评价结束*/
 
-
+.quie_pic {
+    width: 100%;
+     height: 4rem; 
+    text-align: center;
+    display: none;
+    background: white;
+    padding-bottom: 0.5rem;
+    margin-top: -0.2rem;
+}
+.quie_pic img {
+    width: 2.5rem;
+    display: inline-block;
+}
+.quie_pic p {
+    color: #BBBBBB;
+    font-size: 0.3rem;
+    padding: 0.2rem 0;
+}
 
