学堂ui--评价优化。文章添加到头部距离

--- a/wechat/src/main/webapp/xcview/css/all_comment.css
+++ b/wechat/src/main/webapp/xcview/css/all_comment.css
@@ -392,7 +392,7 @@ color: #666666;
 /*标签*/
 .select_lable{
 	clear: both;
-	padding-top: 0.4rem;
+	/*padding-top: 0.4rem;*/
 	overflow: hidden;
     margin-bottom: 0.3rem;
 }
