--- a/wechat/src/main/webapp/xcview/css/live_album.css
+++ b/wechat/src/main/webapp/xcview/css/live_album.css
@@ -739,7 +739,7 @@ textarea::-webkit-input-placeholder {
 /*标签*/
 .select_lable{
 	clear: both;
-	padding-top: 0.4rem;
+	/*padding-top: 0.4rem;*/
 }
 .select_lable .active_color{
 	background: #00BC12;
