--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -329,7 +329,7 @@ p{
     background: #fff;
 }
 .ccvideo{
-	padding: 0.2rem 0;
+	/*padding: 0.2rem 0;*/
     background: #fff;
 }
 .rests_nav_span .title{
@@ -2109,7 +2109,37 @@ table tr td img{
 /*点击分享按钮结束*/
 
 
-.physician_img0{
+/* .physician_img0{
 	display: none;
 }
+ */
 
+/*处理视频*/
+
+.ccH5playerBox{
+	width: 6.98rem !important;
+	height: 3.94rem !important;
+	margin: 0 auto;
+}
+.ccvideo_img{
+	width: 6.98rem;
+    height: 100%;
+    position: absolute;
+    height: 3.94rem;
+    top: 0;
+    z-index: 9;
+    left: 50%;
+    margin-left: -3.49rem;
+}
+.ccvideo_div{
+	position: relative;
+    width: 7.5rem;
+    margin: 0 auto;
+    /*padding: 0.2rem 0;*/
+}
+.rests_nav_bottom{
+	padding: 0.2rem 0;
+}
+.paper_nav_cen_div{
+	padding: 0 !important;
+}
