--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -344,6 +344,7 @@ p{
     text-overflow: ellipsis;
     white-space: nowrap;
     margin-left: 0.26rem;
+    margin-bottom: 0.2rem;
 }
 
 .rests_nav_span .stick_img{
@@ -478,7 +479,7 @@ p{
     /*display: -webkit-box;*/
     float: left;
     /*margin-bottom: 0.2rem;*/
-    min-height: 1rem;
+    min-height: 0.45rem;
 }
 .consilia_nav_span_title{
 	height: 1.65rem;
@@ -1920,6 +1921,28 @@ table tr td img{
 }
 /*介绍结束*/
 
+.baseImagenumbers{
+	width: 100%;
+	height: 5rem;
+	background: #fff;
+	display: none;
+}
+.baseImagenumbers img{
+	width: 2rem;
+    /*height: 2rem;*/
+    margin: 0 auto;
+    display: inherit;
+    padding-top: 1.5rem;
+}
+.baseImagenumbers p{
+	font-size: 0.3rem;
+    color: #999;
+    text-align: center;
+    margin-top: 0.2rem;
+}
+
+
+
 /*中间内容结束*/
 /*点击回复出现删除复制开始*/
 .remove_copy{
@@ -2126,7 +2149,7 @@ table tr td img{
     height: 100%;
     position: absolute;
     height: 3.94rem;
-    top: 0;
+    top: 0.2rem;
     z-index: 9;
     left: 50%;
     margin-left: -3.49rem;
