--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -127,6 +127,8 @@
 .select_list .littleBox .activeP{
 	color: #00bc12;
 }
+
+    
 /*<!--课程/直播/资源/盒子-->*/
 .contentWrap .little_box{
 	width: 950px;
@@ -202,13 +204,15 @@ outline: none;
 	margin-right: 20px;
 	cursor: pointer;
 }
-.activity-nav li img{
-	margin-right: 5px;
-	float: left;
+.activity-nav li i{
+	    font-size: 17px;
+    vertical-align: middle;
+    margin-right: 5px;
+    float: left;
 }
 .activity-nav li .write-left{
 	float: right;
-	margin-top: 2px;
+	/*margin-top: 2px;*/
 }
 .activity-nav li:hover{
 	color: #00bc12;
