--- a/wechat/src/main/webapp/xcview/css/physician/consilia.css
+++ b/wechat/src/main/webapp/xcview/css/physician/consilia.css
@@ -80,11 +80,7 @@ header{
 	width: 100%;
 	height: 0.88rem;
 	opacity: 0;
-}
-.opacity_height{
-	width: 100%;
-	height: 0.88rem;
-	opacity: 0;
+    display: none !important;
 }
 /*头部结束*/
 
