--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -483,7 +483,7 @@ p{
     min-height: 0.45rem;
 }
 .consilia_nav_span_title{
-	height: 1.65rem;
+	height: 1.8rem;
     overflow: hidden;
 }
 .consilia_nav_span .stick_img{
@@ -1430,6 +1430,17 @@ p{
 	display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
+    overflow: hidden;
+    margin-top: 0.1rem;
+}
+.article_nav_cen_sizes{
+	font-size: 0.26rem;
+	color: #333333;
+	float: left;
+	width: 4.29rem;
+	display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
     overflow: hidden;
     margin-top: 0.1rem;
 }
