--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -170,9 +170,13 @@ p{
 	font-size: 0.24rem;
 	color: #999999;
 	margin-right: 0.1rem;
+	float:left;
 }
 .message_face span{
 	display: -webkit-box;
+}
+.message_face .face{
+	position: relative;
 }
 .attention{
 	width: 1.45rem;
@@ -2092,9 +2096,8 @@ table tr td img{
 	bottom: 0 !important;
 }
 #fansCount{
-	margin-top: 0.04rem;
-	position: absolute;
-    top: 0.72rem;
+	    float: left;
+margin-top: 0.015rem;
 }
 
 .consilia_nav_span_div{
@@ -2185,4 +2188,13 @@ table tr td img{
 }
 .panel_hide{
 	padding-bottom: 0 !important;
+}
+
+.paper_nav_span span{
+	width: 6.98rem;
+    display: block;
+    margin: 0 auto;
+}
+.panels_essay_main{
+	min-height: 0.45rem;
 }
