--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -485,6 +485,7 @@ p{
     float: left;
     /*margin-bottom: 0.2rem;*/
     min-height: 0.45rem;
+    word-break: break-all;
 }
 .consilia_nav_span_title{
 	height: 1.8rem;
