--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -589,10 +589,7 @@ outline: none;
 	overflow: hidden;
 	margin: 0;
 }
-.save-photo-wrap li img{
-	width: 100%;
-	height: 100%;
-}
+
 .save-photo-wrap li{
 	float: left;
 	width: 300px;
@@ -860,6 +857,9 @@ outline: none;
 }
 .banner-list-wrap tr th:nth-child(4){
 	width: 123px;
+}
+.banner-list-wrap tr th:nth-child(5){
+	width: 200px;
 }
 .banner-list-wrap tr td a{
 	color: #188EEE;
