--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -255,7 +255,7 @@ p{
     position: absolute;
     top: 0.38rem;
     left: 1.95rem;
-    /*display: none;*/
+    display: block !important;
 }
 .dynamic_opacity{
 	width: 2.3rem;
@@ -2204,7 +2204,7 @@ margin-top: 0.015rem;
 
 .paper_nav_span span{
 	width: 6.98rem;
-    display: block;
+    /*display: block;*/
     margin: 0 auto;
 }
 .panels_essay_main{
