--- a/wechat/src/main/webapp/xcview/css/course_outline.css
+++ b/wechat/src/main/webapp/xcview/css/course_outline.css
@@ -35,13 +35,15 @@ header {
     /* padding-top: 0.298rem; */
 }
 .header_return {
-    width: 0.24rem;
-    height: 0.42rem;
+    width: 1.24rem;
+    height: 0.88rem;
+    line-height: 0.5rem;
     /* background: red; */
     margin-right: 0.362rem;
     float: left;
     position: absolute;
     z-index: 10;
+    margin-left: 0.26rem;
 }
 .header_return img {
     width: 0.24rem;
@@ -68,6 +70,7 @@ header {
     background: #fff;
     margin: 0 auto;
     margin-top: 2.398rem;
+    margin-top: 1.1rem;
 }
 .outline_main{
 	margin-top: ;
@@ -77,47 +80,50 @@ header {
 	color: #333;
 	margin-bottom: 0.31rem;
 	text-align: center;
+    padding-top: 0.36rem;
 }
 .outline_cen{
-	width: 11rem;
-	margin: 0 auto;
-	margin-bottom: 0.681rem;
+	width: 5.5rem;
+    margin: 0 auto;
+    margin-bottom: 0.32rem;
 }
 .outline_cen img{
 	width: 0.24rem;
-	height: 0.24rem;
+    height: 0.24rem;
+    float: left;
+    margin-top: 0.05rem;
+    margin-right: 0.1rem;
 }
 .outline_cen_left{
 	float: left;
-	font-size: 0.553rem;
-	color: #666666;
+    font-size: 0.26rem;
+    color: #666666;
     margin: 0 auto;
-    width: 10rem;
-    text-align: center;
+    width: 2.98rem;
 }
 .outline_cen_right{
 	float: right;
-	font-size: 0.553rem;
-	color: #666666;
+    font-size: 0.26rem;
+    color: #666666;
 }
 .outline_cen_border{
 	width: 100%;
 	border-bottom: 1px solid #f0f0f0;
 }
 .outline_list{
-	width: 13.954rem;
+	width: 6.98rem;
     /* float: right; */
     margin: 0 auto;
 }
 .outline_list_ul p{
-	font-size: 0.553rem;
+	font-size: 0.26rem;
     color: #333333;
     /*border-bottom: 1px solid #d8dde6;*/
-    padding: 0.3rem 0;
+    /*padding: 0.3rem 0;*/
     word-wrap: break-word;
 }
 .outline_list_ul img{
-    max-width: 15rem;
+    /*max-width: 15rem;*/
 }
 /*中间内容结束*/
 
