--- a/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
@@ -102,7 +102,7 @@ header{
 .main{
 	width: 7.5rem;
     margin: 0 auto;
-    margin-top: -0.7rem;
+    /*margin-top: -0.7rem;*/
 }
 .head_portrait{
 	width: 1.4rem;
