--- a/online-web/src/main/webapp/web/css/doctor/writing.css
+++ b/online-web/src/main/webapp/web/css/doctor/writing.css
@@ -154,8 +154,14 @@
     float: left;
     margin-right: 13px;
     margin-bottom: 20px;
+    height: 102px;
 }
-
+.content_box #main .main_right .about_doctor .about_doctor_list > li p{
+	max-width: 60px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 .content_box #main .main_right .about_doctor .about_doctor_list > li .about_doctor_pic {
     display: inline-block;
     width: 60px;
