--- a/online-web/src/main/webapp/web/css/anchor/curriculum.css
+++ b/online-web/src/main/webapp/web/css/anchor/curriculum.css
@@ -12,7 +12,7 @@ table{
 .leftTab_active{
 	color: #00BC12 !important;
 }
-.workTime >ul >li{
+/*.workTime >ul >li{
 	    float: left;
     width: 92px;
     height: 36px;
@@ -24,7 +24,62 @@ table{
 }
 .workTime >ul >li:hover{
 	cursor: pointer;
+}*/
+
+.workTime  table{
+	width: 698px;
+	height: 152px;
+	display: inline-block;
+	vertical-align: top;
+	text-align: center;
 }
+
+.workTime table tr{
+	height: 46px;
+	border: 1px solid #dedede;
+}
+
+.workTime table th{
+	width: 87px;
+	text-align: center;
+}
+.workTime table td p{
+	    width: 20px;
+    height: 20px;
+    border: 1px solid #dedede;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 8px 0 0;
+    cursor: pointer;
+}
+
+.workTime table td p img{
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #deleteTip,#addBankCard{
 	width: 400px;
 	height: 200px;
