--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -290,7 +290,7 @@ p{
 }
 .screen_show_main{
 	width: 7.5rem;
-    height: 1.72rem;
+    height: 2.1rem;
     margin: 0 auto;
     background: #ffffff;
     padding-top: 0.3rem;
@@ -298,6 +298,7 @@ p{
     top: 5.41rem;
     left: 0;
     z-index: 9999999999;
+    overflow: hidden;
 }
 .screen_show_main ul li{
 	float: left;
@@ -329,8 +330,8 @@ p{
 .rests_nav_span{
 	width: 7.5rem;
     margin: 0 auto;
-    height: 0.42rem;
-    padding-top: 0.2rem;
+    min-height: 0.01rem;
+    /*padding-top: 0.2rem;*/
     background: #fff;
 }
 .ccvideo{
@@ -350,6 +351,7 @@ p{
     white-space: nowrap;
     margin-left: 0.26rem;
     margin-bottom: 0.2rem;
+    padding-top: 0.2rem;
 }
 
 .rests_nav_span .stick_img{
@@ -1128,6 +1130,7 @@ p{
 .course_nav_rate span{
 	color: #F97B49;
 	margin-right: 0.06rem;
+	display: inline-block;
 }
 /*课程结束*/
 
@@ -2195,6 +2198,7 @@ margin-top: 0.015rem;
 }
 .rests_nav_bottom{
 	padding: 0.2rem 0;
+	padding-top: 0;
 }
 .paper_nav_cen_div{
 	padding: 0 !important;
